fix bug on overflow image view

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -2546,6 +2546,7 @@ ol.breadcrumb li:before {
 }
 .modal {
   background-color: #1d1d1db0;
+  overflow-y: auto;
 }
 .img-viewer {
   width: 100%;
